--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,9 @@ sqlmodel
 asyncpg
 passlib[bcrypt]
 python-dotenv
+Flask_SQLAlchemy==3.0.2
+Flask_Bcrypt==1.0.1
+PyJWT==2.7.0
+psycopg2-binary==2.9.6
+python-dotenv==1.0.0
+gunicorn==20.1.0
