--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ python-dotenv
 Flask_SQLAlchemy==3.0.2
 Flask_Bcrypt==1.0.1
 PyJWT==2.7.0
-psycopg2-binary==2.9.6
+psycopg2-binary>=2.9.10,<3
 python-dotenv==1.0.0
 gunicorn==20.1.0
 bcrypt
@@ -19,3 +19,5 @@ python-jose[cryptography]
 python-multipart
 pydantic[email]
 apscheduler
+alpha-vantage>=2.4.0
+curl-cffi>=0.6.4
